--- a/app/src/main/res/layout/fragment_details_comic.xml
+++ b/app/src/main/res/layout/fragment_details_comic.xml
@@ -117,27 +117,46 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_descricao"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="16dp"
-            android:text="@string/erro_comic"
+            android:layout_marginEnd="8dp"
+            android:text="@{comic.messageError}"
             android:textAlignment="center"
             android:textColor="@color/textColorPrimaryDark"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:visibility="@{comic.showError}" />
+            android:visibility="@{comic.showError}"
+            tools:text="Mensagem de Erro"
+            tools:visibility="visible" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_voltar"
-            android:layout_width="150dp"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_erro"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/voltar" />
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_atualizar"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".4"
+                android:layout_margin="4dp"
+                android:visibility="@{comic.showButtonRefresh}"
+                android:text="@string/atualizar" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_voltar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".6"
+                android:layout_margin="4dp"
+                android:text="@string/voltar" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
 
