:art: recolor and feedbacks

--- a/app/src/main/res/layout/fragment_details_comic.xml
+++ b/app/src/main/res/layout/fragment_details_comic.xml
@@ -41,7 +41,7 @@
             android:layout_marginBottom="8dp"
             android:text="@string/carregando_informacoes"
             android:textAlignment="center"
-            android:textColor="@color/textColorPrimaryDark"
+            android:textColor="@color/colorAccentDark"
             android:textSize="18sp"
             android:visibility="@{comic.showLoading}"
             tools:visibility="visible" />
@@ -78,7 +78,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="@{comic.current.title}"
-            android:textColor="@color/textColorPrimaryDark"
+            android:textColor="@color/colorAccentDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="@{comic.showCurrent}"
@@ -93,7 +93,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:text="@{@string/preco_revista(comic.current.auxPrice)}"
-            android:textColor="@color/textColorPrimaryDark"
+            android:textColor="@color/colorAccentDark"
             android:textSize="20sp"
             android:visibility="@{comic.showCurrent}"
             tools:text="Preço: R$ 99,55" />
@@ -121,7 +121,7 @@
             android:layout_marginEnd="8dp"
             android:text="@{comic.messageError}"
             android:textAlignment="center"
-            android:textColor="@color/textColorPrimaryDark"
+            android:textColor="@color/colorAccentDark"
             android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="@{comic.showError}"
