--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#BC2222</color>
+<!--    <color name="colorPrimary">#008577</color>-->
+<!--    <color name="colorPrimaryDark">#00574B</color>-->
+<!--    <color name="colorAccent">#BC2222</color>-->
+<!--    <color name="colorAccentDark">#8B1209</color>-->
     <color name="white">#FFFFFF</color>
     <color name="colorAccentTabs">#FF5E00</color>
-    <color name="textColorPrimaryDark">#8B1209</color>
+
+    <color name="colorPrimary">#202020</color>
+    <color name="colorPrimaryDark">#0A0A0A</color>
+    <color name="colorAccent">#F0141E</color>
+    <color name="colorAccentDark">#990F1D</color>
 </resources>
