--- a/app/src/main/res/layout/fragment_details_character.xml
+++ b/app/src/main/res/layout/fragment_details_character.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
             name="character"
-            type="com.example.desafio_android_alberto_junior.database.Character" />
+            type="com.example.desafio_android_alberto_junior.vm.CharacterViewModel" />
     </data>
 
     <com.google.android.material.circularreveal.CircularRevealRelativeLayout
@@ -18,22 +18,50 @@
             android:id="@+id/includeToolbar"
             layout="@layout/toolbar" />
 
+        <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/pb_buscar"
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/includeToolbar"
+            android:layout_marginTop="8dp"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorAccent"
+            android:progressTint="@color/colorAccent"
+            android:visibility="@{character.showLoading}"
+            tools:visibility="visible" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_carregando"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pb_buscar"
+            android:layout_marginBottom="8dp"
+            android:text="@string/carregando_informacoes"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccentDark"
+            android:textSize="18sp"
+            android:visibility="@{character.showLoading}"
+            tools:visibility="visible" />
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/includeToolbar"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="16dp"
-            android:elevation="8dp">
+            android:layout_below="@id/tv_carregando"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="16dp">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ci_imagem"
                 android:layout_width="match_parent"
                 android:layout_height="360dp"
-                android:layout_margin="4dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
+                android:layout_margin="4dp"
                 tools:src="@drawable/ic_portrait_xlarge_not_available" />
         </com.google.android.material.card.MaterialCardView>
 
@@ -44,8 +72,8 @@
             android:layout_below="@id/card_image"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@{character.name}"
-            android:textColor="@color/textColorPrimaryDark"
+            android:text="@{character.current.name}"
+            android:textColor="@color/colorAccentDark"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:text="Hulk" />
@@ -59,7 +87,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:maxLines="3"
-            android:text="@{character.description}"
+            android:text="@{character.current.description}"
             tools:text="Era uma vez no novo méxico a história de um carinha que não sabia o que escrever e não queria usar o lorem ipsum. Seria bem útil, mas ele não quis, então teve que escrever todo esse texto que não fala nada com nada." />
 
         <androidx.appcompat.widget.LinearLayoutCompat
